# chronicle-stack

./: .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Commercial-SaaS-License.md  LICENSE  README.md  pyproject.toml
.act/workflows/: ci.yml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: work-item.yml
.github/workflows/: ci.yml
docs/: agpl-compliance-guide.md  architecture.md  audit-insertion-points.md  audit-log-model.md  backlog-v0.2.md  claude-design-prompt-final-ui.ja.md  claude-design-prompt-final-ui.md  cli-reference.md  commercial-support-scope.md  contributor-license-policy.md  controlled-integration-packages.md  dashboard-navigation-filtering.md  data-model.md  doctor-security-checks.md  doctor.md  downstream-query-engine-acceptance-checklist.md  downstream-query-engine-handoff-bundle.md  downstream-query-engine-trial-inspection.md  downstream-query-engine-trial-record.md  downstream-query-engine-trial-report-template.md  encrypted-store-contract.md  export-manifest.md  external-query-runtime-repo-design.md  final-ui-design-spec.ja.md  final-ui-design-spec.md  final-ui-design-workspace-addendum.ja.md  final-ui-implementation-gap.ja.md  glossary.md  graph-inspection.md  graphrag-boundary.md  integrity-metadata.md  interactive-ui-and-graphrag-roadmap.md  interface-contracts.md  licensing.md  lifecycle-aware-export.md  lifecycle-model.md  local-act-ci.md  local-ai-index-placeholder.md  local-ai-runtime-architecture.md  local-deployment-curl.md  (+389 more)
docs/adr/: 0001-context-assets-security.md  0002-ci-as-trde-phase-gate.md  0003-encrypted-store-abstraction.md  0003-local-act-ci.md  0004-prompt-injection-sanitizer-boundary.md  0004-prototype-mvp-agile-development-methodology.md  0005-audit-log-for-derived-operations.md  0006-lifecycle-redact-seal-tombstone.md  0007-integrity-metadata-preparation.md  0008-doctor-security-checks.md  0009-security-aware-export-profiles.md  0010-controlled-integration-packages.md  0011-observation-e2e-surface-gate.md  0012-audit-insertion-points.md  0013-lifecycle-aware-export.md  0014-package-persistence-model.md  (+85 more)
scripts/: act-ci.sh  backup-local.sh  install-local.sh  restore-local.sh
tests/: test_ai_boundary_service.py  test_ai_index_cli.py  test_artifact.py  test_audit_log.py  test_boundary_rules.py  test_chronicle_object_service.py  test_classification_metadata.py  test_cli.py  test_cli_ux.py  test_context_scope.py  test_context_use_service.py  test_decision.py  test_doctor.py  test_doctor_check_modules.py  test_doctor_security_export_checks.py  test_encrypted_store_contract.py  test_event_recording.py  test_export_manifest.py  test_export_profile_audit.py  test_federation_message_service.py  test_federation_package_cli.py  test_federation_package_service.py  test_graph_export.py  test_graph_inspection.py  test_html_export.py  test_index_projection_builder.py  test_init.py  test_injection_plan.py  test_install_local_script.py  test_integration_package.py  test_integration_package_persistence.py  test_integrity_metadata.py  test_lifecycle_aware_graph_export.py  test_lifecycle_aware_html_export.py  test_lifecycle_aware_markdown_export.py  test_lifecycle_aware_yaml_export.py  test_lifecycle_model.py  test_local_graph_retrieval_adapter.py  test_observation_e2e_docs.py  test_package_inspection_cli.py  (+24 more)
(+830 files in other folders)
