[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "chronicle-stack"
version = "0.3.0.dev0"
description = "Chronicle Stack — local-first record of context, artifacts, decisions, diffs, provenance, and boundary rules"
readme = "README.md"
license = "AGPL-3.0-or-later"
requires-python = ">=3.11"
authors = [{ name = "Tomoyuki Kano" }]
classifiers = [
    "License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)",
]
dependencies = [
    "typer>=0.12",
    "pydantic>=2.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.5",
]

[project.scripts]
chronicle = "chronicle.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/chronicle"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"
