[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "chronicle-stack"
version = "0.4.0.dev0"
description = "Chronicle Stack — local-first record of context, artifacts, decisions, diffs, provenance, and boundary rules"
readme = "README.md"
license = "AGPL-3.0-or-later"
requires-python = ">=3.11"
authors = [{ name = "Tomoyuki Kano" }]
classifiers = [
    "License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)",
]
dependencies = [
    "typer>=0.12",
    "pydantic>=2.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.5.0",
]

[project.scripts]
chronicle = "chronicle.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/chronicle"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.ruff.lint.per-file-ignores]
"src/chronicle/cli.py" = ["ALL"]
"src/chronicle/models/doctor.py" = ["ALL"]
"src/chronicle/services/doctor_service.py" = ["ALL"]
"tests/test_doctor.py" = ["ALL"]
