[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "chronicle-stack"
version = "1.9.0"
description = "Chronicle Stack — local-first record of context, artifacts, decisions, diffs, provenance, and boundary rules"
readme = "README.md"
license = "AGPL-3.0-or-later"
requires-python = ">=3.11"
authors = [{ name = "Tomoyuki Kano" }]
classifiers = [
    "License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)",
]
dependencies = [
    "typer>=0.12",
    "pydantic>=2.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.5.0",
]

[project.scripts]
chronicle = "chronicle.cli:main"
chronicle-graph = "chronicle.cli_graph:graph_app"
chronicle-context = "chronicle.cli_context:context_app"
chronicle-audit = "chronicle.cli_audit:audit_app"
chronicle-lifecycle = "chronicle.cli_lifecycle:lifecycle_app"
chronicle-export = "chronicle.cli_export:export_app"
chronicle-package = "chronicle.cli_package:package_app"

[tool.hatch.build.targets.wheel]
packages = ["src/chronicle"]

[tool.pytest.ini_options]
pythonpath = ["src"]
